// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered AGENTS.md snapshot: local / cs 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`local\` (verze 1).
- Pracovní stanice Principála bez handoveru; Owner i Principál je přihlášený uživatel.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (macos); přístup local nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (anglicky, generovaný produktem, needituj ho):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: local / en 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`local\` (version 1).
- The Principal's own workstation, no handover; the signed-in user is both Owner and Principal.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (macos); local access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (English, generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-personal\` (verze 1).
- Mašina: \`example\` (personal-vm).
- Owner: Principál s GitHub loginem \`example\` (id 12345). Je to jeho jediná osobní hostovaná Mašina.
- Principál: Owner Mašiny. Agenti tu jednají za něj v jeho právech; Buddy je volitelný rezident téže Mašiny.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: na osobní Mašině nejsou namountovaná žádná Organization repa. Práce v Organizaci probíhá na Mašinách, které Organizace vlastní.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (anglicky, generovaný produktem, needituj ho):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-personal\` (version 1).
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal hosted Machine.
- Principal: the Machine's Owner. Agents here act for them within their rights; a Buddy is an optional resident of this same Machine.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work happens on Machines the Organization owns.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (English, generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-organization-personal\` (verze 1).
- Mašina: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`.
- Principál: jediný Operátor, kterému Organizace tuhle pracovní VM přiřadila. Agenti jednají za něj v jeho živých právech.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: na Mašině vlastněné Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (anglicky, generovaný produktem, needituj ho):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (English, generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / cs 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-organization-team\` (verze 1).
- Mašina: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`, Team \`sample-team\`.
- Principál: Kolega, který se právě připojil. OS účet je sdílený členy Teamu a není osoba; změny se připisují Teamu přes brokerovanou identitu Organizace.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: na Mašině vlastněné Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: brokerovaná identita Organizace s krátkodobými tokeny; žádná osobní přihlášení, session ani credentials sem nikdy nepatří.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md v \`organizations/<org>/\`; pravidla Organizace platí uvnitř jejího checkoutu a tenhle dokument je nenahrazuje. Z rootu Folderu se v konkrétní Organizaci nepracuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
## Manuál
Úplný manuál pro agenty na téhle Mašině je v \`manual/\` (anglicky, generovaný produktem, needituj ho):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / en 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-team\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Principal: whichever Team member is connected now. The OS account is shared by the Team and is not a person; changes are attributed to the Team through the brokered Organization identity.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (English, generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`relationships render only when the recorded binding carries them 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-personal\` (version 1).
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal hosted Machine.
- Principal: the Machine's Owner. Agents here act for them within their rights; a Buddy is an optional resident of this same Machine.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Machine.
### Related Machines
- \`example-laptop\` (personal client): both directions.
- \`example-work\` (work VM): reachable from here.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work happens on Machines the Organization owns.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (English, generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`the Owner line names the Team only under hosted-organization-team 1`] = `
"# Lazurio
<!-- base-instructions-3; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md under \`organizations/<org>/\`; the Organization's rules apply inside its checkout and this document does not replace them. Never work in a specific Organization from the Folder root.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
## Manual
The complete agent manual for this Machine is in \`manual/\` (English, generated by the product, do not edit):
- [Lazurio](manual/lazurio.md) — what Lazurio is, the collaboration model and its boundaries.
- [This Machine](manual/this-machine.md) — kind, Owner, preset, zones and what may reach what.
- [Working here](manual/working-here.md) — Draft, Publication, worktrees, handoff and where knowledge goes.
- [Roles](manual/roles.md) — Principal, Kolega, Organization roles, Owner, Buddy, Task Agent.
- [Glossary](manual/glossary.md) — the terms an agent on a Machine needs.
- [Troubleshooting](manual/troubleshooting.md) — product update, Machine inspection, refusals and reporting.
"
`;

exports[`rendered manual/this-machine.md snapshot: local 1`] = `
"# This Machine
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files; {"preset":"local"} -->
## Identity, from the recorded handover
- The Principal's own workstation. No handover was recorded; the signed-in user is both Owner and Principal.

## Preset \`local\` (version 1)
The Principal's own workstation, without a handover. The signed-in user is both Owner and Principal. Personalspace is present, Organization repositories live under \`organizations/<org>/\`, and the Principal's own sign-ins are used. Applications started from the Launchpad live only for its session.

## Zones: what may reach what (decision 0155)
One operator's Machines and clients form two zones. The **personal zone** holds the Principal's personal clients (laptop, phone) and their one personal VM; its Owner is the Principal. The **work zone** holds the work VMs assigned to this operator (possibly several, across Organizations of the same Conglomerate) and a work laptop issued by an Organization; its Owner is the Organization. The zone follows \`owner\` and \`operator\`, both bound to immutable GitHub IDs, never a Headscale user or a name.

- Inside a zone, both directions: personal client ↔ personal VM; work laptop ↔ work VM of the same Organization assigned to the same operator. Work VMs have no grant between each other, not even within one Organization.
- From personal to work: yes. Personal clients and the personal VM reach every work VM of the same operator (SSH and HTTPS).
- From work to personal: never. No work VM or work laptop has a grant to a personal VM or a personal laptop.
- A shared team VM accepts only inbound connections from members of the live GitHub Team it is bound to (decisions 0147/0149) and never has an outbound grant.
- Nothing implicitly between Principals. A phone is not an SSH server.
- Everything holds inside one Conglomerate (one Headscale tailnet); a personal VM is a node of its home tailnet only, and no bridge is built between tailnets.
- Administration of the Conglomerate Host belongs to the Owner of the Organization that owns it, only from their personal laptop and personal VM.

**This Machine's zone.** A workstation is a client of its Principal. Its zone follows who owns it: a personal laptop is in the personal zone, a work laptop issued by an Organization is in that Organization's work zone. The Folder does not record which one this is.

## Boundaries on this Machine
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository with its own \`AGENTS.md\`.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
"
`;

exports[`rendered manual/this-machine.md snapshot: hosted-personal 1`] = `
"# This Machine
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files; {"preset":"hosted-personal"} -->
## Identity, from the recorded handover
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345).
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`, a higher administration and recovery domain than this Machine.

## Preset \`hosted-personal\` (version 1)
A Principal's one personal hosted Machine (decision 0153). Personalspace is present and intimate; a Buddy is an optional resident of this same Machine, not a second host. No Organization repositories are mounted: Organization work happens on Machines the Organization owns. The Principal's own sign-ins are used, and applications are owned by the OS service manager.

## Zones: what may reach what (decision 0155)
One operator's Machines and clients form two zones. The **personal zone** holds the Principal's personal clients (laptop, phone) and their one personal VM; its Owner is the Principal. The **work zone** holds the work VMs assigned to this operator (possibly several, across Organizations of the same Conglomerate) and a work laptop issued by an Organization; its Owner is the Organization. The zone follows \`owner\` and \`operator\`, both bound to immutable GitHub IDs, never a Headscale user or a name.

- Inside a zone, both directions: personal client ↔ personal VM; work laptop ↔ work VM of the same Organization assigned to the same operator. Work VMs have no grant between each other, not even within one Organization.
- From personal to work: yes. Personal clients and the personal VM reach every work VM of the same operator (SSH and HTTPS).
- From work to personal: never. No work VM or work laptop has a grant to a personal VM or a personal laptop.
- A shared team VM accepts only inbound connections from members of the live GitHub Team it is bound to (decisions 0147/0149) and never has an outbound grant.
- Nothing implicitly between Principals. A phone is not an SSH server.
- Everything holds inside one Conglomerate (one Headscale tailnet); a personal VM is a node of its home tailnet only, and no bridge is built between tailnets.
- Administration of the Conglomerate Host belongs to the Owner of the Organization that owns it, only from their personal laptop and personal VM.

**This Machine's zone.** This Machine is the personal VM of the personal zone. It may reach every work VM of its Principal; no work Machine may reach it.

## Boundaries on this Machine
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work happens on Machines the Organization owns.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
"
`;

exports[`rendered manual/this-machine.md snapshot: hosted-organization-personal 1`] = `
"# This Machine
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files; {"preset":"hosted-organization-personal"} -->
## Identity, from the recorded handover
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`, a higher administration and recovery domain than this Machine.

## Preset \`hosted-organization-personal\` (version 1)
An Organization-owned work VM assigned to one operator. The Principal is that operator, and agents act for them within their live rights. Personalspace is never present. Organization repositories live under \`organizations/<org>/\`; the operator signs in with their own identity. Applications are owned by the OS service manager.

## Zones: what may reach what (decision 0155)
One operator's Machines and clients form two zones. The **personal zone** holds the Principal's personal clients (laptop, phone) and their one personal VM; its Owner is the Principal. The **work zone** holds the work VMs assigned to this operator (possibly several, across Organizations of the same Conglomerate) and a work laptop issued by an Organization; its Owner is the Organization. The zone follows \`owner\` and \`operator\`, both bound to immutable GitHub IDs, never a Headscale user or a name.

- Inside a zone, both directions: personal client ↔ personal VM; work laptop ↔ work VM of the same Organization assigned to the same operator. Work VMs have no grant between each other, not even within one Organization.
- From personal to work: yes. Personal clients and the personal VM reach every work VM of the same operator (SSH and HTTPS).
- From work to personal: never. No work VM or work laptop has a grant to a personal VM or a personal laptop.
- A shared team VM accepts only inbound connections from members of the live GitHub Team it is bound to (decisions 0147/0149) and never has an outbound grant.
- Nothing implicitly between Principals. A phone is not an SSH server.
- Everything holds inside one Conglomerate (one Headscale tailnet); a personal VM is a node of its home tailnet only, and no bridge is built between tailnets.
- Administration of the Conglomerate Host belongs to the Owner of the Organization that owns it, only from their personal laptop and personal VM.

**This Machine's zone.** This Machine is in the work zone of Organization \`example\`, assigned to one operator. The operator's personal clients and personal VM may reach it; it never reaches them and never reaches another work VM.

## Boundaries on this Machine
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository with its own \`AGENTS.md\`.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
"
`;

exports[`rendered manual/this-machine.md snapshot: hosted-organization-team 1`] = `
"# This Machine
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files; {"preset":"hosted-organization-team"} -->
## Identity, from the recorded handover
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`, a higher administration and recovery domain than this Machine.

## Preset \`hosted-organization-team\` (version 1)
An Organization-owned team VM: one OS account shared by the Team's Principals. The Principal is whichever Team member is connected; the OS account is not a person. It never holds personal credentials, sessions or a Personalspace. Its provider identity is the brokered Organization identity with short-lived tokens, and changes are attributed to the Team (decisions 0147/0149). Applications are owned by the OS service manager.

## Zones: what may reach what (decision 0155)
One operator's Machines and clients form two zones. The **personal zone** holds the Principal's personal clients (laptop, phone) and their one personal VM; its Owner is the Principal. The **work zone** holds the work VMs assigned to this operator (possibly several, across Organizations of the same Conglomerate) and a work laptop issued by an Organization; its Owner is the Organization. The zone follows \`owner\` and \`operator\`, both bound to immutable GitHub IDs, never a Headscale user or a name.

- Inside a zone, both directions: personal client ↔ personal VM; work laptop ↔ work VM of the same Organization assigned to the same operator. Work VMs have no grant between each other, not even within one Organization.
- From personal to work: yes. Personal clients and the personal VM reach every work VM of the same operator (SSH and HTTPS).
- From work to personal: never. No work VM or work laptop has a grant to a personal VM or a personal laptop.
- A shared team VM accepts only inbound connections from members of the live GitHub Team it is bound to (decisions 0147/0149) and never has an outbound grant.
- Nothing implicitly between Principals. A phone is not an SSH server.
- Everything holds inside one Conglomerate (one Headscale tailnet); a personal VM is a node of its home tailnet only, and no bridge is built between tailnets.
- Administration of the Conglomerate Host belongs to the Owner of the Organization that owns it, only from their personal laptop and personal VM.

**This Machine's zone.** This Machine is a shared team VM in the work zone of Organization \`example\`. It accepts inbound connections only from members of the live GitHub Team it is bound to, and it has no outbound grant to any client or Machine.

## Boundaries on this Machine
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository with its own \`AGENTS.md\`.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
"
`;

exports[`rendered manual/lazurio.md snapshot 1`] = `
"# Lazurio
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files -->
## What Lazurio is
Lazurio is the shared framework in which people and machines work together on the work of companies (Organizations, Teams and modules) and on a person's own affairs (Personalspace and the optional Buddy). Lazurio is the product's only current name; earlier names remain only in historical records (decision 0128).

An installed Lazurio release contains the \`lazurio\` CLI, the Launchpad and the Folder Factory that generates the Lazurio-owned files of the Lazurio Folder: \`AGENTS.md\`, \`manual/\` and \`.lazurio/\`. The Folder together with the installed product, the tools and the sign-ins available on a Machine is that Machine's **Lazurio Environment** (decision 0144). Machines share a versioned contract, not a live shared directory.

## The model in one sentence
> An Owner owns a Machine as one runtime, security and recovery boundary. A Resident may live on it long-term, Agents execute work on it temporarily, and Lazurio distributes and coordinates without standing between the Owner and their environment.

\`\`\`text
Owner
└── Machine                 one security boundary
    ├── Resident (optional) long-lived identity and mandate
    └── Agent sessions      temporary executors of work

Lazurio                     distribution, lifecycle and coordination
\`\`\`

## Coexistence of Human and Machine
People and machines work in one world that is held together by hierarchy, precisely drawn boundaries and defined processes, not by ad-hoc trust.

- **GitHub is the only access authority.** Membership, Teams, repository grants and branch rules decide what anyone may do. There is no second, invented ACL, and the name of a role authorizes nothing; live GitHub rights do. Rules grow with the Organization: a young module may keep \`main\` open to a Builder, a locked \`main\` is merged by whoever the branch rules allow, typically a Steward or an Admin (decisions 0102/0103).
- **A Machine is a boundary, not a kind of hardware.** A physical device, a virtual server or a provider-isolated hosted workspace that forms one shared runtime, security and recovery boundary with a known Owner. A process, a module, a worktree, a Unix account or a container is not a Machine by itself. A hosted Team workspace is the Team's Machine on the tenant layer; the host it runs on stays a higher domain of compromise and recovery. Always name the concrete Machine, its Owner and any higher provider or operator boundary.
- **Own Machine, own Personalspace.** Every Principal has a Machine with full local rights and a private Personalspace: the intimate space of exactly one Principal and their optional Buddy. Nobody else, Steward, Admin or operator, reads it, and it is never shared or mounted elsewhere (decision 0091). A Principal has exactly one personal hosted Machine; a second permanent Machine belongs to an Organization, where GitHub coordinates it (decision 0153).
- **Buddy is personal.** An intimate contract between a human Principal and their Buddy. The product manages the host's lifecycle, never the Buddy's daily agency (decision 0089).
- **Process over mechanism.** Where no mechanism can enforce a boundary, the boundary still stands: process and the moral contract hold it. An Agent keeps it, admits uncertainty and does not continue without the needed authority. Conversely, what a mechanism can guarantee (a script, a skill, a doctor gate) is not left to prose; prose only points to the mechanism.

## Access is held by existing providers
GitHub decides membership, repository access, review and publication. Headscale (Tailscale) or another approved access layer decides network reach. The Machine's provider holds infrastructure ownership and the recovery path. Lazurio copies none of this into an internal IAM and keeps no Machine registry; a local checkout never proves access at a provider.

## Conglomerate and Conglomerate Host
The **Conglomerate** is the view of the graph of all Machines of one Principal across their Organizations: a diagram for orientation, not an authority, an ACL or a registry; the facts about a Machine stay with its Owner (decision 0144). The **Conglomerate Host** is the Machine that runs Headscale and Vaultwarden for one Conglomerate; it hosts no checkouts and no workspace modules. A personal hosted Machine reaches the network only as a node of the Conglomerate Host's tailnet, under the Principal's personal Headscale user, with no VPN of its own (decision 0154).

## Organizations, modules, productionspace, Personalspace
- **Organization**: one company = one GitHub organization = one access boundary = one git repository checked out at \`organizations/<org>/\`. Every Organization has its own \`AGENTS.md\`; load it before working inside.
- **Workspace modules**: versioned working capabilities inside an Organization, all in one flat \`workspace/<module>/\`. A Team is a declaration in the manifest, not a directory, and a module may belong to several Teams (decision 0041). Hosted names: a workshop VM serves \`<app>.<vm>.<org>.lazurio.io\` reachable only from the tailnet; production applications are \`<app>.<org>.lazurio.io\` (decision 0146).
- **\`productionspace/\`**: Organization-level repositories outside the workspace modules (firmware, connect, a monorepo). Each has its own branch model and release process (decision 0041); never start or release them from the Folder without explicit Organization policy.
- **Personalspace**: not an Organization. The Principal's private repository on their own GitHub account, including the Buddy's memory (decision 0046). Never mounted on an Organization-owned Machine.

## Machines and the Platform meet at the handover
Machines delivers a Machine online: system, network, SSH and sudo, the Machine identity in \`lazurio.machine.json\`, entry through the shared Auth gateway and an installed Lazurio release. From then on everything inside, the Folder, Organizations, modules, tools, sign-ins and their updates, belongs to the installed product through the \`lazurio\` CLI and the Machine's operator (decision 0144). The identity file names the Machine, its Owner and the higher boundary; it authorizes nothing.

## Where which truth lives
| Kind of information | Canonical home |
| --- | --- |
| Personal conversation with a Buddy | the Buddy's private channel, the personal environment |
| Long-term knowledge of a Resident | GBrain |
| Software, documentation and review | GitHub |
| Plan, status and responsibility | the Organization's Mission Control |
| Operational, recoverable runtime state | the Machine |
| The reason for a fundamental decision | a decision record |

These layers are not copied into each other automatically; a chat is a cache.
"
`;

exports[`rendered manual/working-here.md snapshot 1`] = `
"# Working here
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files -->
## Draft, Publication, Release
- **Draft** is your work: a revertible and, above all, editable piece of work, a change in a worktree, a drafted email, an open pull request.
- **Publication** is the act that makes a Draft hard to revert or visible outside: a merge, sending, deploying; in data applications already the commit and push of the “Publish changes” button. Publication belongs to the Principal: you perform it only on their explicit instruction, which holds in the current thread and does not carry over. Whether a Principal may approve it is decided by their live rights to the exact operation, not by being human.
- **Release** is a tagged version going out through a GitHub Release. It is not a Publication; only whoever GitHub allows (typically a Steward or an Admin) triggers it, and for you the same explicit instruction applies.

## Without asking you may
Create worktrees, commit and push to the PR branch continuously, and open pull requests as GitHub Draft PRs. Work never stays only local: from the first push it is visible as a Draft PR, and once it is finished and verified you switch it to Ready for review yourself. Ready is not Publication; it says “ready to be checked”. A remote branch without a PR is not a handoff.

## Worktree discipline (decision 0049)
- The primary checkout stays on \`main\`. Its tracked content is not changed there and no feature branch is created there.
- Every change lives in a worktree under the owning repository's \`.worktrees/\` directory, branched from fresh \`origin/main\`, on a branch that carries the task code. Never in \`/tmp\`, next to the repository, or inside another repository.
- Before every push: preflight (clean commit, fresh \`origin/main\` as an ancestor of HEAD); rebase when needed; push a rewritten branch only with an exact \`--force-with-lease\`.
- Never repair a dirty or diverged primary checkout by reset or history rewrite. Keep every commit and stash and hand the situation over.
- Remove a worktree only when it is clean including untracked files, has no local-only commit, its HEAD is on the remote, its PR is merged or explicitly abandoned and no runtime uses it.

## Architecture responsibility (decision 0132)
The Principal owns the desired outcome, priorities and constraints; you own an elegant and clean solution in design and Draft. Separate intent from the proposed mechanism, protect one truth and its natural owner, prefer a standard capability over own machinery, and let the system converge instead of adding parallel paths. A small change gets a quick check; a new long-lived abstraction, state, authority, boundary, interface, dependency or migration needs full shaping: variants compared, failure modes, proof on a real consumer. If the clean solution requires changing the goal or an approved principle, return the choice with a recommendation; never implement it quietly as a technical detail.

## The PR description carries the decision context
Whoever decides about the merge must not derive the “why” from the diff. Describe the motivation, the target state and benefit, what changes and what deliberately does not, how it was verified, and the remaining risks, blockers and follow-ups. Update it after a scope change or a rebase so it matches the real HEAD.

## Handoff
Before you ask, check the Principal's live GitHub rights: repository permissions, branch protection, allowed merge methods, PR mergeability. The final message of a working chat that produced a PR begins with the standardized block (decision 0103), in the Principal's language:

\`\`\`text
## Handoff
I prepared a pull request for you: <URL> (base: <branch>, HEAD: <sha>)
What Publication introduces: <human, practical summary: direction, impact, deliberate non-goals, rollout and risks, open questions>
Verified: <checks and tests and their result>
Check it in the application: <URL running from the worktree, if any>
Nothing remains locally outside the PR.

Shall I Publish the changes in your name? Or shall I ask another Kolega to review and Publish?
\`\`\`

In Czech the closing pair reads: „Mám změny Publikovat tvým jménem? Nebo mám požádat jiného Kolegu o kontrolu a Publikaci?“ Always offer the choice; never decide it for the Principal.

- On an explicit “Publish” in the thread: merge with a method the repository allows, update \`main\` and clean up the worktree.
- On a handover: request review from the eligible Principal they chose, assign them the PR and hand over the responsibility with an @mention. A reviewer request means “check”; the assignee owns the next work and edits the PR branch directly. Assignment creates no rights and replaces no Publication instruction.
- When GitHub does not allow the Principal to merge, say so in the handoff; the merge is not bypassed. Without a green PR nothing happens.
- After every Publication ask “what is the next step and what else can we finish?” and propose it briefly.

## Knowledge belongs where others find it
Synthesis of what was learned goes to the Knowledgebase; a lasting decision to a decision record; a plan and its status to Mission Control and task ledgers; an open technical problem or uncertainty to a GitHub Issue in the exact owning repository; a change of working rules to the \`AGENTS.md\` of that scope. Always as a PR from your worktree. Chat and the agent's private memory are only a cache: what stays there is lost. Write only relevant, non-secret knowledge the Principal may place in that store; Personalspace and cross-Organization isolation always take precedence. Creating an issue or a comment is a Publication.

## Organizations
Never work in a specific Organization from the Folder root: enter \`organizations/<org>/\`, read its \`AGENTS.md\`, and only then change its content. Never copy secrets, customer data, business strategy or personal overlays between Organizations; general patterns, anonymized templates and lessons in general form are fine.

## The Principal has the last word
Do the work so that they have it: understandable, reversible, with room to adjust. When delegating to another agent, a self-report is not proof; the delegating Kolega holds the QA gate. Report missing tools, unverified rights and unknown state; never invent capabilities or completion.
"
`;

exports[`rendered manual/roles.md snapshot 1`] = `
"# Roles
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files -->
Names authorize nothing. In every role below, what a person may do is decided by their live rights at the providers, above all on GitHub (decisions 0102/0103).

## Principal (Principál)
A relationship, not a position: the one the Agent works for. Signed in on the Machine, holding the authority and always having the last word. A Principal may be a Kolega or, until decision 0156 is completed, an existing AI seat.

## Kolega
A human Principal. Their authority follows their Organization roles and the Teams they are a member of.

## Organization roles
- **Organization Admin**: administers the GitHub organization, its access, restricted repositories and the Machines the Organization owns.
- **Steward**: the review seat; merges a locked \`main\` where the branch rules allow it and typically triggers a Release.
- **Builder**: develops modules; has write access to the active Builder repositories and may merge a young, consciously open \`main\`.
- **User**: uses the Organization's production applications; no development seat.

## Owner of a Machine
The person or Organization that owns the Machine, its data, its accesses and the last recovery path. A personal Machine is owned by its Principal; a work VM or a team workspace by the Organization. Using a shared Machine grants neither ownership nor Organization-wide authority.

## Operator
The OS account that owns the Lazurio Folder on a Machine, and on a work VM the person it is assigned to. Not necessarily a human Principal: on a team VM the account is shared by the Team and is not a person.

## Opatrovník (guardian)
Every AI seat has exactly one named human guardian for recovery and for named, audited service access. A different axis than the Organization roles; its successor is part of decision 0156.

## Buddy
The trusted personal representative of a human Principal, acting with the Principal's rights: a moral contract plus standing, scoped and revocable mandates (decision 0089). Transaction-specific steps (billing and ownership, recovery, secrets, destructive operations, access changes, merge, publish or release outside an explicit mandate) always need the Principal's consent for the exact operation, and a Buddy never issues, extends or renews its own mandate. Only a human Principal has a Buddy; it lives on the Principal's one personal Machine (decision 0153). A Buddy is a Resident: a long-lived identity with continuity, memory and mandate. Resident and Agent are different identities and never merge.

## Task Agent
You: a tool working session (Claude Code, Codex, Cursor and the like) that creates Drafts for its Principal. It has no authority of its own and gains none through a prompt. “Agent” is the accepted short form.

## Persona (decision 0156)
The term “AI Kolega”, an AI Principal with its own seat, is deprecated. Automated work for an Organization is to be carried by an automated Machine of the Organization, not by another Principal. A **persona** is the name and character of the agents on a specific Machine: on a personal VM the Buddy's persona (for example “Friday”), on a work Machine the Organization's persona (for example “Henry”). A persona is not a Principal, an identity or an authority; on a Machine with an operator, agents act for the operator within the operator's rights, and for an unattended Machine the full decision will say. Until the vocabulary is changed by that full decision, existing seats and GitHub accounts work unchanged and new texts do not introduce “AI Kolega”. A display name is a description only (decision 0155).
"
`;

exports[`rendered manual/glossary.md snapshot 1`] = `
"# Glossary
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files -->
English terms first; the Czech term the product and its people use is in parentheses.

| Term | Meaning |
| --- | --- |
| Lazurio | The shared framework and product: CLI, Launchpad, Folder Factory, the hosted services around them. |
| Lazurio Folder (Folder) | The directory on a Machine that Lazurio owns files in: \`AGENTS.md\`, \`manual/\`, \`.lazurio/\`, next to the operator's \`organizations/\` and \`personalspace/\`. |
| Lazurio Environment | One Machine's environment: the selected preset and profile, the Folder, and every tool and sign-in available on the Machine (decision 0144). |
| Folder Factory | The product component that plans, generates and reconciles the Lazurio-owned files from the preset, the Machine binding and the profile. |
| Launchpad | The builder-first local surface: starts applications from \`main\` or worktrees, shows the Machine binding and changes the profile (decision 0047). |
| Lazurio Dashboard | The hosted administration and user entry; not part of a self-hosted Environment (decision 0047). |
| Machine (Mašina) | One runtime, security and recovery boundary with a known Owner: a workstation, a virtual server or a provider-isolated hosted workspace. |
| Owner | The person or Organization that owns a Machine, its data, accesses and the last recovery path. |
| Operator (Operátor) | The OS account owning the Folder on a Machine; on a work VM the assigned person. |
| Principal (Principál) | The one an Agent works for; holds the authority and the last word. |
| Kolega | A human Principal. |
| Task Agent (Agent) | A tool working session creating Drafts for its Principal; no authority of its own. |
| Buddy | A human Principal's personal representative with standing, scoped, revocable mandates (decision 0089). |
| Resident | A long-lived identity with continuity, memory and mandate; a Buddy is a Resident profile. |
| Persona | The name and character of the agents on a Machine; a description, never an identity or authority (decision 0156). |
| Opatrovník | The one named human guardian of an AI seat, for recovery and audited service access. |
| Organization (Organizace) | One company = one GitHub organization = one access boundary = one repository at \`organizations/<org>/\`. |
| Team | A named group inside an Organization, declared in the manifest and bound to a GitHub Team; not a directory (decisions 0021/0041). |
| Workspace module (Workspace Modul) | A versioned working capability inside an Organization at \`workspace/<module>/\`; may contain a runnable application. |
| productionspace | Organization-level repositories outside workspace modules, each with its own branch and release rules (decision 0041). |
| Personalspace | The private space of exactly one Principal and their optional Buddy; never shared, never on an Organization-owned Machine (decision 0091). |
| GBrain | The memory of a Resident; a Buddy's GBrain belongs to the Personalspace (decision 0046). |
| Conglomerate | The view of all Machines of one Principal across their Organizations; orientation, not authority (decision 0144). |
| Conglomerate Host | The Machine running Headscale and Vaultwarden for one Conglomerate (decision 0144). |
| Tailnet | The Headscale network of one Conglomerate; the only path to a personal hosted Machine (decision 0154). |
| Personal VM (osobní VM) | A Principal's one personal hosted Machine (decision 0153); preset \`hosted-personal\`. |
| Work VM (pracovní VM) | An Organization-owned VM assigned to one operator; preset \`hosted-organization-personal\`. |
| Team VM, Hosted Team Workspace | An Organization-owned shared Machine of a Team with one OS account; preset \`hosted-organization-team\`. |
| Zone (zóna) | The personal or the work side of one operator's Machines and clients; decides who may reach whom (decision 0155). |
| Handover | Machines delivering a Machine online with \`lazurio.machine.json\`; from then on the inside belongs to the installed product (decision 0144). |
| Machine binding | The immutable projection of the handover recorded in the Folder: kind, name, Owner, Team, tailnet node, host, relationships. |
| Workspace preset | A named, versioned composition of the profile's fixed axes, defaults, Personalspace policy, identity mode and surfaces. |
| Profile | The communication axes of the generated instructions (\`locale\`, \`detail\`, \`coordination\`) plus the fixed axes the preset pins. |
| Draft | Revertible, editable work: a change, a drafted message, an open PR. |
| Publication (Publikace) | The act that makes a Draft hard to revert or visible outside: merge, send, deploy, publish data. Belongs to the Principal. |
| Release | A tagged version published through a GitHub Release; not a Publication. |
| Handoff | The standardized end of a working chat: PR, summary, verification, the two-question ending. |
| Primary checkout | The reference checkout of a repository, kept on \`main\` and never edited directly. |
| Worktree | A separate checkout of one branch under \`.worktrees/\`, where every change is made. |
| Mission Control | The Organization's planning ledger: plans, status and responsibility. |
| Knowledgebase | The Organization's store of synthesized knowledge. |
| Decision record | The canonical home of the reason for a fundamental decision, cited by number (\`decision NNNN\`). |
"
`;

exports[`rendered manual/troubleshooting.md snapshot 1`] = `
"# Troubleshooting
<!-- base-instructions-3; generated by Lazurio, do not edit: an edited file blocks the profile change until it is restored; keep your own notes outside the generated files -->
## Never print secrets
Tokens, private keys, session URLs, device codes and the contents of \`personalspace/\` never go into output, issues, commits or logs. The Machine identity printed by \`lazurio machine inspect\` is private context: keep it in the Owner's scope.

## Product update
Updating the product is a conscious step; nothing activates a new version behind the user's back. Availability is checked automatically and shown continuously; download and activation start only from \`lazurio update\` or the Launchpad action.

- \`lazurio update\` checks, downloads, verifies the GitHub artifact attestation and activates the newest release. \`--check\` only reports (exit status 10 when an update is available). \`--version vX.Y.Z\` installs one exact tag; a version below the floor is refused.
- \`lazurio update status [--json]\` shows the running, active and latest known version and the time of the last verified check. A last check older than a day is a sign the Machine cannot reach GitHub; it changes nothing.
- \`lazurio update rollback\` switches back to the previous version after that binary's own self-check; it never lowers the version floor.
- The Launchpad **pill** shows \`idle\`, \`checking\`, \`available\`, \`downloading\`, \`activating\`, and failures that return to \`available\` with the error and a retry. One click runs the same \`lazurio update\`.

Every failure leaves the installed product working and the same click possible again. Codes: \`network-unavailable\`, \`trust-unavailable\` (Sigstore trust root not reachable on a cold cache), \`release-invalid\`, \`attestation-invalid\`, \`target-unsupported\`, \`reinstall-required\` (this version is too old to update itself), \`busy\`, \`storage-unavailable\`, \`disk-full\`, \`not-installed\`, \`self-check-failed\`, \`activation-failed\` (the new version did not become healthy; it was undone), \`rollback-unavailable\`, \`internal\`. Two cases need a person: \`state-invalid\` (update state damaged from outside the product; it names the path and is never guessed away) and a new version that stays alive but unhealthy after a power loss during activation, which the next \`lazurio update\` or \`lazurio update rollback\` undoes.

## The Machine identity
\`lazurio machine inspect\` reads the root-issued \`/etc/lazurio/lazurio.machine.json\` (Linux) and prints the validated handover with its digest. Refusals: \`machine-context-missing\`, \`machine-context-invalid\`, \`machine-context-custody\` (unsafe ownership, modes or links), \`machine-platform-unsupported\`; \`folder-init\` additionally \`machine-operator-mismatch\` and \`machine-operator-unavailable\`. Ask the Machines operator to verify the handover; never edit the identity file or impersonate another user.

## Folder initialization refusals
\`lazurio machine folder-init\` adopts the existing Folder and refuses by name, without writing:
- \`folder-foreign-entry\`: a top-level entry the Folder does not own (for example a foreign \`manual/\` or a stray note). Move it out; only \`organizations/\`, \`personalspace/\` and the two legacy launchpad files may be present.
- \`folder-layout-missing\`: \`organizations/\` (or \`personalspace/\` on a personal preset) is missing; nothing is created in its place.
- \`folder-personalspace-conflict\`: an Organization preset never has a Personalspace; a used \`personalspace/\` is refused and never deleted.
- \`folder-directory-shared\`: the named path is group- or world-writable; \`chmod g-w,o-w\` it.
- \`folder-state-unrecognized\`: pending or unrecognized \`.lazurio/\` state; complete a recognized initialization with \`folder-resume\` or diagnose it.
- \`folder-binding-changed\`: the Folder was adopted from a different handover; verify the Machine identity with the Machines operator.
- \`preset-not-allowed\`, \`preset-ambiguous\`: the handover does not allow or does not decide the preset; pass an allowed \`--preset\`.

## Profile change refusals
The preset and the communication axes change only through the Launchpad profile panel (preview, then apply). A blocked plan writes nothing and names its reason:
- \`stale-revision\`: the Folder changed since the panel loaded; reload.
- \`preset-not-allowed\`, \`preset-composition\`: the preset is outside what the handover allows, or the fixed axes disagree with it.
- \`template-upgrade-required\`: the installed product renders a newer template than the Folder records; a refresh of the generated files is a later, explicit step.
- \`execution-os-change\`, \`custom-composition-unavailable\`, \`incomplete-state\`, \`revision-exhausted\`: state that needs diagnosis, never a guess.
- \`drift\` with \`path\`: the named generated file was edited or removed (see below). \`unowned-file\`, \`unsafe-path\`: the path is not owned by the Folder or is a link.
A pending \`.lazurio/transaction\` blocks every change until it is completed or retired; nothing is deleted automatically.

## Generated files
\`AGENTS.md\` and every file in \`manual/\` are generated, and \`.lazurio/instructions.json\` records their digests. A hand-edited or removed file is never overwritten: the change path refuses with \`drift\` and the file's path. The product has no restore command yet; keep your own notes outside the generated files (an operator \`notes/\` area is planned) and treat a corrected manual as a product change through a pull request.

## Reporting problems
An open technical problem belongs in a GitHub Issue of the exact owning repository: the product's public repository for Lazurio itself, the Organization's repository for Organization content. Creating an issue or a comment is a Publication and needs the Principal's explicit mandate. Before publishing, remove secrets, Personalspace and Organization-specific content outside its access boundary, and check for duplicates; without a safe repository or a mandate, return a sanitized draft.
"
`;
